--- a/.github/workflows/format_action.yaml
+++ b/.github/workflows/format_action.yaml
@@ -1,17 +1,35 @@
-name: Continuous Integration
+name: Autopep8 Format and Commit
 
 on:
-  pull_request:
   push:
     branches:
       - '*'
 
 jobs:
-  build:
+  autopep8:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
       with:
-        ref: ${{ github.head_ref }}
-    - uses: creyD/action_autopep8@v3.1
+        python-version: 3.10
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install autopep8
+
+    - name: Autopep8 format
+      run: autopep8 --recursive --in-place .
+
+    - name: Commit changes
+      run: |
+        git config --global user.name 'Istvan Madi'
+        git config --global user.email 'madi.sitvan20@gmail.com'
+        git add .
+        git diff-index --quiet HEAD || git commit -m "Autopep8 formatting"
+        git push
