--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,8 @@ readme = "README.md"
 requires-python = ">=3.11"
 dynamic = ["dependencies", "optional-dependencies"]
 
-[tool.setuptools]
-packages = ["dog_breed_identification"]
+[tool.setuptools.packages.find]
+namespaces = false
 
 [tool.setuptools.dynamic]
 dependencies = {file = ["requirements.txt"]}
