--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
+hydra-core==1.3.2
 pandas==2.1.4
+scikit_learn==1.3.2
+timm==0.9.12
 torch==2.1.0
 torchvision==0.16.0
-timm==0.9.12
-scikit-learn==1.3.2
