--- a/.github/workflows/pipreqs.yaml
+++ b/.github/workflows/pipreqs.yaml
@@ -20,7 +20,15 @@ jobs:
         python-version: '3.x'
 
     - name: Install pipreqs
-      run: pip install pipreqs
+      run: python -m pip install pipreqs
 
     - name: Generate requirements.txt
       run: pipreqs . --force
+
+    - name: Commit changes
+      run: |
+        git config --global user.name 'Boldizsar Elek'
+        git config --global user.email 'boldizsarelek@gmail.com'
+        git add requirements.txt
+        git diff-index --quiet HEAD || git commit -m "requirements.txt update"
+        git push
