--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -29,6 +29,7 @@ jobs:
       - uses: iterative/setup-dvc@v1
       - name: Get data
         run: |
+          gcloud -h
           echo $GOOGLE_APPLICATION_CREDENTIALS
           gcloud auth activate-service-account --key-file=$GOOGLE_APPLICATION_CREDENTIALS
           dvc pull
