--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -28,10 +28,8 @@ jobs:
           credentials_json: ${{ secrets.DATA_BUCKET_SERVICE_ACCOUNT }}
       - uses: iterative/setup-dvc@v1
       - name: Get data
-        run: |
-          gsutil ls
-          echo $GOOGLE_APPLICATION_CREDENTIALS
-          gcloud auth activate-service-account --key-file=$GOOGLE_APPLICATION_CREDENTIALS
-          dvc pull
+        run: dvc pull
+        env:
+          GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
       - name: Run tests
         run: pytest tests/
