--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -28,8 +28,8 @@ jobs:
           credentials_json: ${{ secrets.DATA_BUCKET_SERVICE_ACCOUNT }}
       - uses: iterative/setup-dvc@v1
       - name: Get data
-        run: dvc pull
-        env:
-          GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
+        run: | 
+          cat GOOGLE_APPLICATION_CREDENTIALS
+          dvc pull
       - name: Run tests
         run: pytest tests/
