--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -29,7 +29,7 @@ jobs:
       - uses: iterative/setup-dvc@v1
       - name: Get data
         run: | 
-          cat GOOGLE_APPLICATION_CREDENTIALS
+          cat $GOOGLE_APPLICATION_CREDENTIALS
           dvc pull
       - name: Run tests
         run: pytest tests/
