--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -26,10 +26,11 @@ jobs:
         uses: 'google-github-actions/auth@v1'
         with:
           credentials_json: ${{ secrets.DATA_BUCKET_SERVICE_ACCOUNT }}
-      - uses: iterative/setup-dvc@v2
+      - uses: iterative/setup-dvc@v1
       - name: Get data
         run: | 
-          cat $GOOGLE_APPLICATION_CREDENTIALS
-          dvc pull
+          dvc remote modify --local remote_storage \
+                    credentialpath $GOOGLE_APPLICATION_CREDENTIALS
+          dvc pull -r remote_storage
       - name: Run tests
         run: pytest tests/
