--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -33,7 +33,7 @@ jobs:
           curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
           sudo apt-get update
           sudo apt-get install gcsfuse
-          mkdir -p gs
-          gcsfuse dtu-mlops-data-bucket /gs
+          mkdir "$HOME/gs"
+          gcsfuse dtu-mlops-data-bucket "$HOME/gs"
       - name: Run tests
         run: pytest tests/
