--- a/dog_breed_identification/config/train_config.yaml
+++ b/dog_breed_identification/config/train_config.yaml
@@ -2,4 +2,4 @@ name: exp1
 epochs: 10
 lr: 0.001
 batch_size: 64
-data_path: '~/home/runner/gs/dtu-mlops-data-bucket/data/processed'
+data_path: '/gs/dtu-mlops-data-bucket/data/processed'
