--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -33,6 +33,7 @@ jobs:
           sudo apt-get install gcsfuse
           mkdir "$HOME/gs"
           gcsfuse --key-file=$GOOGLE_APPLICATION_CREDENTIALS $HOME/gs
+          ls $HOME/gs
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Run tests
