--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -32,7 +32,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install gcsfuse
           mkdir -p "$HOME/gs"
-          ls $HOME/gs
+          sudo ls $HOME/gs
           gcsfuse --key-file=$GOOGLE_APPLICATION_CREDENTIALS $HOME/gs
           ls $HOME/gs
           python -m pip install --upgrade pip
