--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -34,7 +34,7 @@ jobs:
           mkdir -p "$HOME/gs"
           sudo ls $HOME/gs
           gcsfuse --key-file=$GOOGLE_APPLICATION_CREDENTIALS $HOME/gs
-          sudo ls $HOME/gs
+          sudo touch $HOME/gs/tmp.txt
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Run tests
