--- a/dog_breed_identification/config/train_config.yaml
+++ b/dog_breed_identification/config/train_config.yaml
@@ -2,4 +2,5 @@ name: exp1
 epochs: 10
 lr: 0.001
 batch_size: 64
-data_path: 'gs/data/processed'
+data_path: 'data/processed'
+data_bucket_name: 'dtu-mlops-data-bucket'
