--- a/.github/workflows/deploy_api.yaml
+++ b/.github/workflows/deploy_api.yaml
@@ -20,23 +20,23 @@ jobs:
     steps:
     
     - name: Google Cloud Authentication
-      uses: 'google-github-actions/auth@v1'
+      uses: google-github-actions/auth@v1
       with: 
-        credentials_json: '${{ env.GCP_CREDENTIALS }}'
+        credentials_json: ${{ env.GCP_CREDENTIALS }}
 
     - name: Set up Cloud SDK
-      uses: 'google-github-actions/setup-gcloud@v1'
+      uses: google-github-actions/setup-gcloud@v1
     
     - name: Build docker image
-      uses: 'gcr.io/cloud-builders/docker'
+      uses: gcr.io/cloud-builders/docker
       args: ['build', '-t', 'gcr.io/${{ env.PROJECT_ID }}/${{ env.CONTAINER_NAME }}:latest', '.'] 
 
     - name: Push docker image to Container Registry
-      uses: 'gcr.io/cloud-builders/docker'
+      uses: gcr.io/cloud-builders/docker
       args: ['push', 'gcr.io/${{ env.PROJECT_ID }}/${{ env.CONTAINER_NAME }}:latest']
     
     - name: Deploy API
-      uses: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+      uses: gcr.io/google.com/cloudsdktool/cloud-sdk
       entrypoint: gcloud
       args:
       - 'run'
