--- a/.github/workflows/train_model.yaml
+++ b/.github/workflows/train_model.yaml
@@ -10,6 +10,8 @@ jobs:
   connect-to_gcp:
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
     - name: Gcp Auth
       uses: 'google-github-actions/auth@v1'
       with: 
@@ -18,7 +20,6 @@ jobs:
       uses: 'google-github-actions/setup-gcloud@v1'
       with:
         version: '>= 363.0.0'
-    - uses: actions/checkout@v3
     - name: 'Start Model Training'
       run: |
         gcloud ai custom-jobs create \
