--- a/.github/workflows/train_model.yaml
+++ b/.github/workflows/train_model.yaml
@@ -1,8 +1,5 @@
 name: Manual Model Training Workflow
 
-env:
-  ENVIRONMENT: cpu
-
 on:
   workflow_dispatch:
 
@@ -25,4 +22,4 @@ jobs:
         gcloud ai custom-jobs create \
         --region=europe-west1 \
         --display-name=test-run \
-        --config=.github/config/{{$ENVIRONMENT}}_config.yaml
+        --config=.github/config/cpu_config.yaml
