--- a/.github/workflows/train_model.yaml
+++ b/.github/workflows/train_model.yaml
@@ -12,7 +12,7 @@ jobs:
     - name: Gcp Auth
       uses: 'google-github-actions/auth@v1'
       with: 
-        credentials_json: '${{ secrets.DATA_BUCKET_SERVICE_ACCOUNT_2 }}'
+        credentials_json: '${{ secrets.GCP_TRAIN }}'
     - name: 'Set up Cloud SDK'
       uses: 'google-github-actions/setup-gcloud@v1'
       with:
