--- a/.github/workflows/train_model.yaml
+++ b/.github/workflows/train_model.yaml
@@ -2,6 +2,11 @@ name: Manual Model Training Workflow
 
 on:
   workflow_dispatch:
+      inputs:
+        env:
+          description: 'Model to train'
+          required: true
+          default: 'cpu'
 
 jobs:
   connect-to_gcp:
@@ -22,4 +27,4 @@ jobs:
         gcloud ai custom-jobs create \
         --region=europe-west1 \
         --display-name=test-run \
-        --config=.github/config/cpu_config.yaml
+        --config=.github/config/${{ github.event.inputs.env }}_config.yaml
