Added parameter to cpu config

--- a/.github/config/cpu_config.yaml
+++ b/.github/config/cpu_config.yaml
@@ -4,3 +4,6 @@ workerPoolSpecs:
     replicaCount: 1
     containerSpec:
         imageUri: gcr.io/dtu-mlops-project-410911/train_image:latest
+        env:
+        - name: WANDB_API_KEY
+          value: $WANDB_API_KEY
