--- a/.github/workflows/train_model.yaml
+++ b/.github/workflows/train_model.yaml
@@ -22,11 +22,13 @@ jobs:
       uses: 'google-github-actions/setup-gcloud@v1'
       with:
         version: '>= 363.0.0'
+    - name: Replace placeholder in config.yml
+      run: |
+        sed -i "s/\$WANDB_API_KEY/${{ secrets.WANDB_API_KEY }}/g" .github/config/${{ github.event.inputs.env }}_config.yaml
+        cat .github/config/${{ github.event.inputs.env }}_config.yaml
     - name: 'Start Model Training'
       run: |
         gcloud ai custom-jobs create \
         --region=europe-west1 \
         --display-name=test-run \
         --config=.github/config/${{ github.event.inputs.env }}_config.yaml
-      env:
-        WANDB_API_KEY: ${{ secrets.WANDB_API_KEY }}
