--- a/.github/workflows/train_model.yaml
+++ b/.github/workflows/train_model.yaml
@@ -24,8 +24,8 @@ jobs:
         version: '>= 363.0.0'
     - name: Replace placeholder in config.yml
       run: |
-        sed 's/$WANDB_API_KEY/'"$WANDB_API_KEY"'/' .github/config/cpu_config.yaml
-        cat .github/config/${{ github.event.inputs.env }}_config.yaml
+        sed 's/$WANDB_API_KEY/'"$WANDB_API_KEY"'/' .github/config/${{ github.event.inputs.env }}_config.yaml > ./.github/config/config.yaml
+        cat .github/config/config.yaml
       env:
         WANDB_API_KEY: ${{ secrets.WANDB_API_KEY }}
     - name: 'Start Model Training'
@@ -33,4 +33,4 @@ jobs:
         gcloud ai custom-jobs create \
         --region=europe-west1 \
         --display-name=test-run \
-        --config=.github/config/${{ github.event.inputs.env }}_config.yaml
+        --config=.github/config/config.yaml
