--- a/.github/workflows/train_model.yaml
+++ b/.github/workflows/train_model.yaml
@@ -24,6 +24,7 @@ jobs:
         version: '>= 363.0.0'
     - name: Replace placeholder in config.yml
       run: |
+        echo $WANDB_API_KEY
         sed 's/$WANDB_API_KEY/'"$WANDB_API_KEY"'/' .github/config/${{ github.event.inputs.env }}_config.yaml > ./.github/config/config.yaml
         cat .github/config/config.yaml
       env:
