--- a/.github/workflows/train_model.yaml
+++ b/.github/workflows/train_model.yaml
@@ -25,8 +25,9 @@ jobs:
     - name: Replace placeholder in config.yml
       run: |
         echo ${{secrets.WANDB_API_KEY}} | sed 's/./& /g'
+
         sed 's/$WANDB_API_KEY/'"$WANDB_API_KEY"'/' .github/config/${{ github.event.inputs.env }}_config.yaml > ./.github/config/config.yaml
-        cat .github/config/config.yaml
+        cat ./.github/config/config.yaml | sed 's/./& /g'
       env:
         WANDB_API_KEY: ${{ secrets.WANDB_API_KEY }}
     - name: 'Start Model Training'
