--- a/dog_breed_identification/config/train_config.yaml
+++ b/dog_breed_identification/config/train_config.yaml
@@ -4,3 +4,4 @@ lr: 0.001
 batch_size: 64
 data_path: 'data/processed'
 data_bucket_name: 'dtu-mlops-data-bucket'
+model_bucket_name: 'dog-breed-identification-model'
