--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ protobuf==4.25.2
 pytest==7.4.4
 scikit_learn==1.3.2
 timm==0.9.12
-torch==2.1.2
+torch==2.1.2+cu11.7
 torchvision==0.16.2
 wandb==0.16.2
 google-cloud-storage
