--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -1,33 +1,40 @@
-name: Train model
-on: [push]
+name: cml
+on:
+  push:
+    branches:
+      - "*"
+  pull_request:
+    branches:
+      - "*"
 jobs:
-  run:
-    runs-on: [ubuntu-latest]
+  test-code:
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: iterative/setup-cml@v2
-      - name: Set up Python
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: '3.10'
+          cache: 'pip'
+      - id: 'auth'
+        name: 'Authenticate to Google Cloud'
+        uses: 'google-github-actions/auth@v1'
+        with:
+          credentials_json: ${{ secrets.DATA_BUCKET_SERVICE_ACCOUNT_2 }}
       - name: Install dependencies
         run: |
+          pwd
+          ls ~
+          export GCSFUSE_REPO=gcsfuse-`lsb_release -c -s`
+          echo "deb https://packages.cloud.google.com/apt $GCSFUSE_REPO main" | sudo tee /etc/apt/sources.list.d/gcsfuse.list
+          curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
+          sudo apt-get update
+          sudo apt-get install gcsfuse
+          mkdir "$HOME/gs"
+          gcsfuse "$HOME/gs"
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install .
-      - uses: iterative/setup-dvc@v1
-      - name: Get data
-        run: dvc pull
-        env:
-            GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
-      - name: Train model
+      - name: Run cml
         run: |
-          python dog_breed_identification/train_cml.py
-      - name: Write report
-        env:
-          # this authenticates that the right permissions are in place
-          REPO_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: |
-          cat reports/figures/classification_report.txt >> report.md
-          echo "![confusion_matrix](reports/figures/confusion_matrix.png)" >> report.md
-          cml comment create report.md
+          make train_cml
