--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -7,7 +7,7 @@ on:
     branches:
       - "*"
 jobs:
-  test-code:
+  cml:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
